--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -167,8 +167,8 @@
     "    torch.randn(n_walker, 1, 3),\n",
     "    tau=0.1,\n",
     ")\n",
-    "samples, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(samples.flatten(end_dim=1), gtowf, h2_plus)[0].view(n_walker, -1)\n",
+    "rs, psis, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, h2_plus)[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(*samples[0][:50, 0, :2].numpy().T)\n",
+    "plt.plot(*rs[0][:50, 0, :2].numpy().T)\n",
     "plt.gca().set_aspect(1)"
    ]
   },
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "plt.hist2d(\n",
-    "    *samples[:, 50:].flatten(end_dim=1)[:, 0, :2].numpy().T,\n",
+    "    *rs[:, 50:].flatten(end_dim=1)[:, 0, :2].numpy().T,\n",
     "    bins=100,\n",
     "    range=[[-3, 3], [-3, 3]],\n",
     ")                                   \n",
@@ -288,16 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y, z = torc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exp_label = 'exp31'\n",
+    "exp_label = 'exp34'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
@@ -372,9 +363,9 @@
     "    torch.randn(n_walker, 1, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
-    "samples, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(samples.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
-    "samples = samples.cpu()\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
+    "rs = rs.cpu()\n",
     "E_loc = E_loc.cpu()\n",
     "wfnet.cpu()\n",
     "info.acceptance.mean()"
@@ -496,8 +487,8 @@
     "    torch.randn(n_walker, 2, 3).cuda(),\n",
     "    tau=0.1,\n",
     ")\n",
-    "samples, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(samples.flatten(end_dim=1), gtowf, h2_mol.as_param_dict().cuda())[0].view(n_walker, -1).cpu()\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, h2_mol.as_param_dict().cuda())[0].view(n_walker, -1).cpu()\n",
     "info.acceptance.mean()"
    ]
   },
@@ -741,20 +732,6 @@
    "source": [
     "gtowf(rs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
