refactor grad/laplacian from physics

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -20,7 +20,8 @@
    "outputs": [],
    "source": [
     "%aimport dlqmc.utils, dlqmc.sampling, dlqmc.analysis, dlqmc.gto, \\\n",
-    "    dlqmc.physics, dlqmc.nn, dlqmc.fit, dlqmc.torchext, dlqmc.geom"
+    "    dlqmc.physics, dlqmc.nn, dlqmc.fit, dlqmc.torchext, dlqmc.geom, \\\n",
+    "    dlqmc.grad"
    ]
   },
   {
