refactors fixed parameters as buffers

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -449,9 +449,9 @@
     "mol = gto.M(\n",
     "    atom=h2_mol.as_pyscf(),\n",
     "    unit='bohr',\n",
-    "    basis='6-311g',\n",
+    "    basis='aug-cc-pvqz',\n",
     "    charge=0,\n",
-    "    spin=0,\n",
+    "    spin=2,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "mf.kernel()\n",
