refactor nn.py into a subpackage

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -20,8 +20,9 @@
    "outputs": [],
    "source": [
     "%aimport dlqmc.utils, dlqmc.sampling, dlqmc.analysis, dlqmc.gto, \\\n",
-    "    dlqmc.physics, dlqmc.nn, dlqmc.fit, dlqmc.torchext, dlqmc.geom, \\\n",
-    "    dlqmc.grad"
+    "    dlqmc.physics, dlqmc.fit, dlqmc.torchext, dlqmc.geom, \\\n",
+    "    dlqmc.grad, dlqmc.nn, \\\n",
+    "    dlqmc.nn.base, dlqmc.nn.wfnet"
    ]
   },
   {
