add bfnet tests

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -41,7 +41,6 @@
     "from torch import nn\n",
     "import pyscf\n",
     "from pyscf import gto, scf\n",
-    "from pyscf.data.nist import BOHR\n",
     "from tqdm.auto import tqdm, trange\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
@@ -51,7 +50,7 @@
     "from dlqmc.physics import local_energy\n",
     "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF\n",
     "from dlqmc.analysis import autocorr_coeff, blocking\n",
-    "from dlqmc.geom import Geometry\n",
+    "from dlqmc.geom import Geometry, angstrom\n",
     "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh\n",
     "import dlqmc.torchext as torchext"
    ]
@@ -64,7 +63,7 @@
    "source": [
     "h_atom = Geometry([[1, 0, 0]], [1])\n",
     "h2_plus = Geometry([[-1, 0, 0], [1, 0, 0]], [1, 1])\n",
-    "h2_mol = Geometry([[0, 0, 0], [0.742/BOHR, 0, 0]], [1, 1])\n",
+    "h2_mol = Geometry([[0, 0, 0], [0.742*angstrom, 0, 0]], [1, 1])\n",
     "be_atom = Geometry([[0, 0, 0]], [4])"
    ]
   },
@@ -290,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'exp34'\n",
+    "exp_label = 'exp35'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
