add debugging infrastructure

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -335,7 +335,7 @@
    "outputs": [],
    "source": [
     "plot_func_xy(\n",
-    "    lambda x: wfnet.deep_lin(wfnet._featurize(x[:, None])[0]).squeeze(),\n",
+    "    lambda x: wfnet.debug('ys', x[:, None]),\n",
     "    [[-10, 10], [-10, 10]]\n",
     ");"
    ]
@@ -408,8 +408,8 @@
     "plot_func_x(lambda x: torch.log(gtowf_big(x[:, None])), bounds, label='~exact WF');\n",
     "plot_func_x(lambda x: torch.log(gtowf(x[:, None])), bounds, label='small-basis WF');\n",
     "plot_func_x(lambda x: torch.log(wfnet(x[:, None]))-0.2, bounds, label='DL WF');\n",
-    "plot_func_x(lambda x: torch.log(wfnet.nuc_asymp(wfnet._featurize(x[:, None])[1][0]))-0.89, bounds, label='asymptotics');\n",
-    "plot_func_x(lambda x: wfnet.deep_lin(wfnet._featurize(x[:, None])[0]).squeeze()-0.2, bounds, label='NN');\n",
+    "plot_func_x(lambda x: torch.log(wfnet.debug('asymp', x[:, None]))-0.89, bounds, label='asymptotics');\n",
+    "plot_func_x(lambda x: wfnet.debug('ys', x[:, None])-0.2, bounds, label='NN');\n",
     "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
     "plt.ylim(-1.5, None)"
    ]
