--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -263,12 +263,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wfnet = WFNet(h2_plus, 1, ion_pot=0.7).cuda()\n",
+    "wfnet = WFNet(h2_plus, 1, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet,\n",
     "    torch.randn(1_000, 1, 3, device='cuda'),\n",
     "    tau=0.1,\n",
-    ")"
+    ")\n",
+    "wfnet"
    ]
   },
   {
@@ -277,12 +278,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'exp35'\n",
+    "exp_label = 'wfnet/06'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
     "        partial(loss_local_energy, E_ref=-0.5),\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=0.005),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=range(1),\n",
@@ -299,7 +300,7 @@
     "    fit_wfnet(\n",
     "        wfnet,\n",
     "        loss_local_energy,\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=0.005),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=3e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=trange(10, desc='samplings'),\n",
@@ -335,7 +336,7 @@
    "outputs": [],
    "source": [
     "plot_func_xy(\n",
-    "    lambda x: wfnet.debug('ys', x[:, None]),\n",
+    "    lambda x: wfnet.debug('jastrow', x[:, None]),\n",
     "    [[-10, 10], [-10, 10]]\n",
     ");"
    ]
@@ -409,7 +410,7 @@
     "plot_func_x(lambda x: torch.log(gtowf(x[:, None])), bounds, label='small-basis WF');\n",
     "plot_func_x(lambda x: torch.log(wfnet(x[:, None]))-0.2, bounds, label='DL WF');\n",
     "plot_func_x(lambda x: torch.log(wfnet.debug('asymp', x[:, None]))-0.89, bounds, label='asymptotics');\n",
-    "plot_func_x(lambda x: wfnet.debug('ys', x[:, None])-0.2, bounds, label='NN');\n",
+    "plot_func_x(lambda x: wfnet.debug('jastrow', x[:, None])-0.2, bounds, label='NN');\n",
     "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
     "plt.ylim(-1.5, None)"
    ]
