--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -440,7 +440,7 @@
     "    unit='bohr',\n",
     "    basis='aug-cc-pvqz',\n",
     "    charge=0,\n",
-    "    spin=2,\n",
+    "    spin=0,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "mf.kernel()\n",
@@ -458,7 +458,7 @@
     "    unit='bohr',\n",
     "    basis='6-311g',\n",
     "    charge=0,\n",
-    "    spin=2,\n",
+    "    spin=0,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
@@ -471,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_walker = 10_000\n",
+    "n_walker = 1_000\n",
     "sampler = langevin_monte_carlo(\n",
     "    gtowf,\n",
     "    torch.randn(n_walker, 2, 3).cuda(),\n",
@@ -489,7 +489,7 @@
    "outputs": [],
    "source": [
     "plt.plot(E_loc.mean(dim=0).numpy())\n",
-    "plt.ylim(-0.8, -0.7)"
+    "plt.ylim(-1.2, -1)"
    ]
   },
   {
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(E_loc[:, 100:].flatten().clamp(-1.25, 0).numpy(), bins=100);"
+    "plt.hist(E_loc[:, 100:].flatten().clamp(-2, 0).numpy(), bins=100);"
    ]
   },
   {
@@ -551,30 +551,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mol = gto.M(\n",
-    "    atom=as_pyscf_atom(h2_mol),\n",
-    "    unit='bohr',\n",
-    "    basis='6-311g',\n",
-    "    charge=1,\n",
-    "    spin=1,\n",
-    ")\n",
-    "mf = scf.RHF(mol)\n",
-    "scf_energy = mf.kernel()\n",
-    "gtowf = GTOWF(mf, 0, use_pyscf=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wfnet = WFNet(h2_mol, 2, ion_pot=0.7).cuda()\n",
+    "wfnet = WFNet(h2_mol, 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet,\n",
     "    torch.randn(1_000, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
-    ")"
+    ")\n",
+    "wfnet"
    ]
   },
   {
@@ -583,12 +566,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'H2/exp01'\n",
+    "exp_label = 'H2/wfnet/01'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
     "        partial(loss_local_energy, E_ref=-1.1),\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=0.005),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=range(1),\n",
@@ -605,7 +588,7 @@
     "    fit_wfnet(\n",
     "        wfnet,\n",
     "        loss_local_energy,\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=0.005),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=trange(10, desc='samplings'),\n",
@@ -633,9 +616,9 @@
     "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
-    "samples, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(samples.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
-    "samples = samples.cpu()\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
+    "rs = rs.cpu()\n",
     "E_loc = E_loc.cpu()\n",
     "wfnet.cpu()\n",
     "info.acceptance.mean()"
@@ -647,7 +630,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(E_loc.mean(dim=0).numpy())"
+    "plt.plot(E_loc.mean(dim=0).numpy())\n",
+    "plt.ylim(-1.2, -1)"
    ]
   },
   {
@@ -656,21 +640,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(loops, steps):\n",
-    "    for loop in loops:\n",
-    "        for step in steps:\n",
-    "            time.sleep(0.1)\n",
-    "\n",
-    "\n",
-    "f(range(2), range(10))\n",
-    "f(trange(2), trange(10, leave=False))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Be atom"
+    "plt.hist(E_loc[:, 100:].flatten().clamp(-2, 0).numpy(), bins=100);\n",
+    "plt.xlim(-2, 0)"
    ]
   },
   {
@@ -679,16 +650,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mol = gto.M(\n",
-    "    atom=be_atom.as_pyscf(),\n",
-    "    unit='bohr',\n",
-    "    basis='6-311g',\n",
-    "    charge=0,\n",
-    "    spin=0,\n",
-    ")\n",
-    "mf = scf.RHF(mol)\n",
-    "mf.kernel()\n",
-    "gtowf = PyscfGTOSlaterWF(mf)"
+    "E_loc[:, 100:].std()"
    ]
   },
   {
@@ -697,16 +659,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rs = torch.rand(100, 4, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gtowf(rs)"
+    "E_loc[:, 100:].mean().item(), (E_loc[:, 100:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()"
    ]
   }
  ],
