update jh notebook

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -36,10 +36,11 @@
     "from dlqmc.fit import fit_wfnet, loss_local_energy, wfnet_fit_driver\n",
     "from dlqmc.sampling import samples_from, langevin_monte_carlo\n",
     "from dlqmc.physics import local_energy\n",
-    "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF\n",
+    "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF, electron_density_of\n",
     "from dlqmc.analysis import autocorr_coeff, blocking\n",
     "from dlqmc.geom import Geometry, angstrom\n",
-    "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh\n",
+    "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh, batch_eval\n",
+    "from dlqmc.stats import GaussianKDEstimator\n",
     "import dlqmc.torchext as torchext"
    ]
   },
@@ -444,7 +445,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "mf.kernel()\n",
-    "gtowf = PyscfGTOSlaterWF(mf)"
+    "gtowf_big = PyscfGTOSlaterWF(mf)"
    ]
   },
   {
@@ -566,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'H2/wfnet/01'\n",
+    "exp_label = 'H2/wfnet/02'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
@@ -610,16 +611,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_walker = 1_000\n",
+    "n_walker = 10_000\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet.cuda(),\n",
     "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
-    "rs = rs.cpu()\n",
-    "E_loc = E_loc.cpu()\n",
+    "E_loc = batch_eval(\n",
+    "    lambda x: local_energy(x.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(1000, -1),\n",
+    "    1000,\n",
+    "    rs\n",
+    ")\n",
     "wfnet.cpu()\n",
     "info.acceptance.mean()"
    ]
@@ -630,7 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(E_loc.mean(dim=0).numpy())\n",
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
     "plt.ylim(-1.2, -1)"
    ]
   },
@@ -640,7 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(E_loc[:, 100:].flatten().clamp(-2, 0).numpy(), bins=100);\n",
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);\n",
     "plt.xlim(-2, 0)"
    ]
   },
@@ -650,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_loc[:, 100:].std()"
+    "E_loc[:, 50:].std()"
    ]
   },
   {
@@ -659,7 +662,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E_loc[:, 100:].mean().item(), (E_loc[:, 100:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()"
+    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func_x(lambda x: electron_density_of(mf, x), [-2, 3], is_torch=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs_flat = rs[:, 50:].flatten(end_dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = GaussianKDEstimator(rs_flat.flatten(end_dim=1), bw=0.05, weights=2)\n",
+    "plot_func_x(density, [-2, 3], device='cuda');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
+    "radial_pair = GaussianKDEstimator(\n",
+    "    samples[:, None],\n",
+    "    bw=0.01,\n",
+    "    weights=1/samples**2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
    ]
   }
  ],
@@ -668,18 +722,6 @@
    "display_name": "dl-qmc",
    "language": "python",
    "name": "dl-qmc"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
   },
   "varInspector": {
    "cols": {
