--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -39,7 +39,7 @@
     "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF, electron_density_of\n",
     "from dlqmc.analysis import autocorr_coeff, blocking\n",
     "from dlqmc.geom import Geometry, angstrom\n",
-    "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh, batch_eval\n",
+    "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh, batch_eval_tuple\n",
     "from dlqmc.stats import GaussianKDEstimator\n",
     "import dlqmc.torchext as torchext"
    ]
@@ -618,11 +618,13 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = batch_eval(\n",
-    "    lambda x: local_energy(x.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(1000, -1),\n",
-    "    1000,\n",
-    "    rs\n",
-    ")\n",
+    "E_loc = batch_eval_tuple(\n",
+    "    local_energy,\n",
+    "    500_000,\n",
+    "    rs.flatten(end_dim=1),\n",
+    "    wfnet,\n",
+    "    wfnet.geom\n",
+    ")[0].view(n_walker, -1)\n",
     "wfnet.cpu()\n",
     "info.acceptance.mean()"
    ]
