add comparison to untrained H2

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -552,6 +552,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wfnet0 = WFNet(h2_mol, 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
+    "n_walker = 10_000\n",
+    "sampler0 = langevin_monte_carlo(\n",
+    "    wfnet0.cuda(),\n",
+    "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "rs0, _, info = samples_from(sampler0, trange(500))\n",
+    "E_loc0 = batch_eval_tuple(\n",
+    "    local_energy,\n",
+    "    500_000,\n",
+    "    rs0.flatten(end_dim=1),\n",
+    "    wfnet0,\n",
+    "    wfnet0.geom\n",
+    ")[0].view(n_walker, -1)\n",
+    "wfnet0.cpu()\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wfnet = WFNet(h2_mol, 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet,\n",
@@ -635,6 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(E_loc0.mean(dim=0).cpu().numpy())\n",
     "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
     "plt.ylim(-1.2, -1)"
    ]
@@ -645,6 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.hist(E_loc0[:, 50:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);\n",
     "plt.hist(E_loc[:, 50:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);\n",
     "plt.xlim(-2, 0)"
    ]
@@ -673,16 +700,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: electron_density_of(mf, x), [-2, 3], is_torch=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rs_flat = rs[:, 50:].flatten(end_dim=1)"
+    "rs_flat = rs[:, 50:].flatten(end_dim=1)\n",
+    "rs_flat0 = rs0[:, 50:].flatten(end_dim=1)"
    ]
   },
   {
@@ -692,7 +711,10 @@
    "outputs": [],
    "source": [
     "density = GaussianKDEstimator(rs_flat.flatten(end_dim=1), bw=0.05, weights=2)\n",
-    "plot_func_x(density, [-2, 3], device='cuda');"
+    "density0 = GaussianKDEstimator(rs_flat0.flatten(end_dim=1), bw=0.05, weights=2)\n",
+    "plot_func_x(density0, [-2, 3], device='cuda');\n",
+    "plot_func_x(density, [-2, 3], device='cuda');\n",
+    "plot_func_x(lambda x: electron_density_of(mf, x), [-2, 3], is_torch=False)"
    ]
   },
   {
@@ -702,8 +724,14 @@
    "outputs": [],
    "source": [
     "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
+    "samples0 = (rs_flat0[:, 0] - rs_flat0[:, 1]).norm(dim=-1)\n",
     "radial_pair = GaussianKDEstimator(\n",
     "    samples[:, None],\n",
+    "    bw=0.01,\n",
+    "    weights=1/samples**2\n",
+    ")\n",
+    "radial_pair0 = GaussianKDEstimator(\n",
+    "    samples0[:, None],\n",
     "    bw=0.01,\n",
     "    weights=1/samples**2\n",
     ")"
@@ -715,8 +743,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
     "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -724,6 +760,18 @@
    "display_name": "dl-qmc",
    "language": "python",
    "name": "dl-qmc"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   },
   "varInspector": {
    "cols": {
