--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -38,22 +38,10 @@
     "from dlqmc.physics import local_energy\n",
     "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF, electron_density_of\n",
     "from dlqmc.analysis import autocorr_coeff, blocking\n",
-    "from dlqmc.geom import Geometry, angstrom\n",
+    "from dlqmc.geom import Geometry, angstrom, geomdb\n",
     "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh, batch_eval_tuple\n",
     "from dlqmc.stats import GaussianKDEstimator\n",
     "import dlqmc.torchext as torchext"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h_atom = Geometry([[1, 0, 0]], [1])\n",
-    "h2_plus = Geometry([[-1, 0, 0], [1, 0, 0]], [1, 1])\n",
-    "h2_mol = Geometry([[0, 0, 0], [0.742*angstrom, 0, 0]], [1, 1])\n",
-    "be_atom = Geometry([[0, 0, 0]], [4])"
    ]
   },
   {
@@ -77,7 +65,7 @@
    "outputs": [],
    "source": [
     "mol = gto.M(\n",
-    "    atom=h2_plus.as_pyscf(),\n",
+    "    atom=geomdb['H2+'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='aug-cc-pv5z',\n",
     "    charge=1,\n",
@@ -95,7 +83,7 @@
    "outputs": [],
    "source": [
     "mol = gto.M(\n",
-    "    atom=h2_plus.as_pyscf(),\n",
+    "    atom=geomdb['H2+'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='6-311g',\n",
     "    charge=1,\n",
@@ -141,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf, h2_plus)[0], [-3, 3])\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf, geomdb['H2+'])[0], [-3, 3])\n",
     "plt.ylim((-10, 0));"
    ]
   },
@@ -158,7 +146,7 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, psis, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, h2_plus)[0].view(n_walker, -1)\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2+'])[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
@@ -264,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wfnet = WFNet(h2_plus, 1, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
+    "wfnet = WFNet(geomdb['H2+'], 1, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet,\n",
     "    torch.randn(1_000, 1, 3, device='cuda'),\n",
@@ -437,7 +425,7 @@
    "outputs": [],
    "source": [
     "mol = gto.M(\n",
-    "    atom=h2_mol.as_pyscf(),\n",
+    "    atom=geomdb['H2'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='aug-cc-pvqz',\n",
     "    charge=0,\n",
@@ -455,7 +443,7 @@
    "outputs": [],
    "source": [
     "mol = gto.M(\n",
-    "    atom=h2_mol.as_pyscf(),\n",
+    "    atom=geomdb['H2'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='6-311g',\n",
     "    charge=0,\n",
@@ -479,7 +467,7 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, h2_mol.as_param_dict().cuda())[0].view(n_walker, -1).cpu()\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2'].as_param_dict().cuda())[0].view(n_walker, -1).cpu()\n",
     "info.acceptance.mean()"
    ]
   },
@@ -552,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wfnet0 = WFNet(h2_mol, 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
+    "wfnet0 = WFNet(geomdb['H2'], 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "n_walker = 10_000\n",
     "sampler0 = langevin_monte_carlo(\n",
     "    wfnet0.cuda(),\n",
@@ -577,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wfnet = WFNet(h2_mol, 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
+    "wfnet = WFNet(geomdb['H2'], 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "sampler = langevin_monte_carlo(\n",
     "    wfnet,\n",
     "    torch.randn(1_000, 2, 3, device='cuda'),\n",
