add electronic asymptotics to hannet

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -32,7 +32,8 @@
     "from tqdm.auto import tqdm, trange\n",
     "from tensorboardX import SummaryWriter\n",
     "\n",
-    "from dlqmc.nn import WFNet, DistanceBasis\n",
+    "%aimport dlqmc.nn.base\n",
+    "from dlqmc.nn import WFNet, HanNet, DistanceBasis\n",
     "from dlqmc.fit import fit_wfnet, loss_local_energy, wfnet_fit_driver\n",
     "from dlqmc.sampling import samples_from, langevin_monte_carlo\n",
     "from dlqmc.physics import local_energy\n",
@@ -267,7 +268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'wfnet/06'\n",
+    "exp_label = 'wfnet/09'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
@@ -276,9 +277,9 @@
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=range(1),\n",
-    "            n_epochs=5,\n",
+    "            n_epochs=2,\n",
     "            n_sampling_steps=550,\n",
-    "            batch_size=10_000,\n",
+    "            batch_size=1_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
@@ -289,13 +290,13 @@
     "    fit_wfnet(\n",
     "        wfnet,\n",
     "        loss_local_energy,\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=3e-3),\n",
+    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=trange(10, desc='samplings'),\n",
-    "            n_epochs=5,\n",
+    "            n_epochs=1,\n",
     "            n_sampling_steps=550,\n",
-    "            batch_size=10_000,\n",
+    "            batch_size=1_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
@@ -431,9 +432,9 @@
     "    charge=0,\n",
     "    spin=0,\n",
     ")\n",
-    "mf = scf.RHF(mol)\n",
-    "mf.kernel()\n",
-    "gtowf_big = PyscfGTOSlaterWF(mf)"
+    "mf_big = scf.RHF(mol)\n",
+    "mf_big.kernel()\n",
+    "gtowf_big = PyscfGTOSlaterWF(mf_big)"
    ]
   },
   {
@@ -580,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'H2/wfnet/02'\n",
+    "exp_label = 'H2/wfnet/09'\n",
     "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
     "    fit_wfnet(\n",
     "        wfnet,\n",
@@ -588,10 +589,10 @@
     "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
-    "            samplings=range(1),\n",
-    "            n_epochs=5,\n",
-    "            n_sampling_steps=550,\n",
-    "            batch_size=10_000,\n",
+    "            samplings=range(3),\n",
+    "            n_epochs=1,\n",
+    "            n_sampling_steps=300,\n",
+    "            batch_size=5_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
@@ -606,9 +607,9 @@
     "        wfnet_fit_driver(\n",
     "            sampler,\n",
     "            samplings=trange(10, desc='samplings'),\n",
-    "            n_epochs=5,\n",
-    "            n_sampling_steps=550,\n",
-    "            batch_size=10_000,\n",
+    "            n_epochs=1,\n",
+    "            n_sampling_steps=300,\n",
+    "            batch_size=2_000,\n",
     "            n_discard=50,\n",
     "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
     "            range_training=partial(trange, desc='training steps', leave=False),\n",
@@ -702,7 +703,7 @@
     "density0 = GaussianKDEstimator(rs_flat0.flatten(end_dim=1), bw=0.05, weights=2)\n",
     "plot_func_x(density0, [-2, 3], device='cuda');\n",
     "plot_func_x(density, [-2, 3], device='cuda');\n",
-    "plot_func_x(lambda x: electron_density_of(mf, x), [-2, 3], is_torch=False)"
+    "plot_func_x(lambda x: electron_density_of(mf_big, x), [-2, 3], is_torch=False)"
    ]
   },
   {
@@ -736,11 +737,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HanNet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wfnet = HanNet(\n",
+    "    geomdb['H2'],\n",
+    "    1,\n",
+    "    1,\n",
+    "    ion_pot=0.7,\n",
+    "    # basis_dim=2,\n",
+    "    # kernel_dim=1,\n",
+    "    # embedding_dim=1,\n",
+    "    # latent_dim=1,\n",
+    "    # n_interactions=1,\n",
+    "    # n_orbital_layers=1,\n",
+    ")\n",
+    "wfnet"
+   ]
   }
  ],
  "metadata": {
