add fit_wfnet_multi utility function

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "%aimport dlqmc.nn.base\n",
     "from dlqmc.nn import WFNet, HanNet, DistanceBasis\n",
-    "from dlqmc.fit import fit_wfnet, loss_local_energy, wfnet_fit_driver\n",
+    "from dlqmc.fit import fit_wfnet_multi, loss_local_energy, wfnet_fit_driver\n",
     "from dlqmc.sampling import samples_from, langevin_monte_carlo\n",
     "from dlqmc.physics import local_energy\n",
     "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF, electron_density_of\n",
@@ -268,42 +268,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'wfnet/09'\n",
-    "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
-    "    fit_wfnet(\n",
-    "        wfnet,\n",
-    "        partial(loss_local_energy, E_ref=-0.5),\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
-    "        wfnet_fit_driver(\n",
-    "            sampler,\n",
-    "            samplings=range(1),\n",
-    "            n_epochs=2,\n",
-    "            n_sampling_steps=550,\n",
-    "            batch_size=1_000,\n",
-    "            n_discard=50,\n",
-    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
-    "            range_training=partial(trange, desc='training steps', leave=False),\n",
-    "        ),\n",
-    "        writer=writer,\n",
-    "    )\n",
-    "with SummaryWriter(f'runs/{exp_label}/variance') as writer:\n",
-    "    fit_wfnet(\n",
-    "        wfnet,\n",
-    "        loss_local_energy,\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
-    "        wfnet_fit_driver(\n",
-    "            sampler,\n",
-    "            samplings=trange(10, desc='samplings'),\n",
-    "            n_epochs=1,\n",
-    "            n_sampling_steps=550,\n",
-    "            batch_size=1_000,\n",
-    "            n_discard=50,\n",
-    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
-    "            range_training=partial(trange, desc='training steps', leave=False),\n",
-    "        ),\n",
-    "        writer=writer,\n",
-    "    )\n",
-    "wfnet.cpu();"
+    "fit_wfnet_multi(\n",
+    "    wfnet,\n",
+    "    (partial(loss_local_energy, E_ref=-0.5), loss_local_energy),\n",
+    "    (torch.optim.Adam(wfnet.parameters(), lr=2e-3) for _ in range(2)),\n",
+    "    partial(\n",
+    "        wfnet_fit_driver,\n",
+    "        sampler,\n",
+    "        n_epochs=1,\n",
+    "        n_sampling_steps=550,\n",
+    "        batch_size=1_000,\n",
+    "        n_discard=50,\n",
+    "        range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "        range_training=partial(trange, desc='training steps', leave=False),\n",
+    "    ),\n",
+    "    ({'samplings': range(1)}, {'samplings': trange(10, desc='samplings')}),\n",
+    "    (SummaryWriter(f'runs/wfnet/09/{s}') for s in ['pretrain', 'variance']),\n",
+    ")\n",
+    "wfnet.cpu()"
    ]
   },
   {
@@ -581,41 +563,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_label = 'H2/wfnet/09'\n",
-    "with SummaryWriter(f'runs/{exp_label}/pretrain') as writer:\n",
-    "    fit_wfnet(\n",
-    "        wfnet,\n",
-    "        partial(loss_local_energy, E_ref=-1.1),\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
-    "        wfnet_fit_driver(\n",
-    "            sampler,\n",
-    "            samplings=range(3),\n",
-    "            n_epochs=1,\n",
-    "            n_sampling_steps=300,\n",
-    "            batch_size=5_000,\n",
-    "            n_discard=50,\n",
-    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
-    "            range_training=partial(trange, desc='training steps', leave=False),\n",
-    "        ),\n",
-    "        writer=writer,\n",
-    "    )\n",
-    "with SummaryWriter(f'runs/{exp_label}/variance') as writer:\n",
-    "    fit_wfnet(\n",
-    "        wfnet,\n",
-    "        loss_local_energy,\n",
-    "        torch.optim.Adam(wfnet.parameters(), lr=2e-3),\n",
-    "        wfnet_fit_driver(\n",
-    "            sampler,\n",
-    "            samplings=trange(10, desc='samplings'),\n",
-    "            n_epochs=1,\n",
-    "            n_sampling_steps=300,\n",
-    "            batch_size=2_000,\n",
-    "            n_discard=50,\n",
-    "            range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
-    "            range_training=partial(trange, desc='training steps', leave=False),\n",
-    "        ),\n",
-    "        writer=writer,\n",
-    "    )\n",
+    "fit_wfnet_multi(\n",
+    "    wfnet,\n",
+    "    (partial(loss_local_energy, E_ref=-1.1), loss_local_energy),\n",
+    "    (torch.optim.Adam(wfnet.parameters(), lr=2e-3) for _ in range(2)),\n",
+    "    partial(\n",
+    "        wfnet_fit_driver,\n",
+    "        sampler,\n",
+    "        n_epochs=1,\n",
+    "        n_sampling_steps=300,\n",
+    "        n_discard=50,\n",
+    "        range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "        range_training=partial(trange, desc='training steps', leave=False),\n",
+    "    ),\n",
+    "    (\n",
+    "        {'samplings': trange(3, desc='samplings'), 'batch_size': 5_000},\n",
+    "        {'samplings': trange(10, desc='samplings'), 'batch_size': 2_000},\n",
+    "    ),\n",
+    "    (SummaryWriter(f'runs/H2/wfnet/10/{s}') for s in ['pretrain', 'variance']),\n",
+    ")\n",
     "wfnet.cpu();"
    ]
   },
