--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -533,8 +533,7 @@
     "rs0, _, info = samples_from(sampler0, trange(500))\n",
     "E_loc0 = batch_eval_tuple(\n",
     "    local_energy,\n",
-    "    500_000,\n",
-    "    rs0.flatten(end_dim=1),\n",
+    "    rs0.flatten(end_dim=1).split(500_000),\n",
     "    wfnet0,\n",
     "    wfnet0.geom\n",
     ")[0].view(n_walker, -1)\n",
@@ -600,8 +599,7 @@
     "rs, _, info = samples_from(sampler, trange(500))\n",
     "E_loc = batch_eval_tuple(\n",
     "    local_energy,\n",
-    "    500_000,\n",
-    "    rs.flatten(end_dim=1),\n",
+    "    rs.flatten(end_dim=1).split(500_000),\n",
     "    wfnet,\n",
     "    wfnet.geom\n",
     ")[0].view(n_walker, -1)\n",
