keep everything on a gpu

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -284,8 +284,7 @@
     "    ),\n",
     "    ({'samplings': range(1)}, {'samplings': trange(10, desc='samplings')}),\n",
     "    (SummaryWriter(f'runs/wfnet/09/{s}') for s in ['pretrain', 'variance']),\n",
-    ")\n",
-    "wfnet.cpu()"
+    ")"
    ]
   },
   {
@@ -297,6 +296,7 @@
     "plot_func_x(\n",
     "    lambda x: local_energy(x[:, None], wfnet, wfnet.geom)[0],\n",
     "    [-15, 15],\n",
+    "    device='cuda'\n",
     ")\n",
     "plt.ylim((-1, 0));"
    ]
@@ -309,7 +309,8 @@
    "source": [
     "plot_func_xy(\n",
     "    lambda x: wfnet.debug('jastrow', x[:, None]),\n",
-    "    [[-10, 10], [-10, 10]]\n",
+    "    [[-10, 10], [-10, 10]],\n",
+    "    device='cuda'\n",
     ");"
    ]
   },
@@ -321,15 +322,12 @@
    "source": [
     "n_walker = 1_000\n",
     "sampler = langevin_monte_carlo(\n",
-    "    wfnet.cuda(),\n",
+    "    wfnet,\n",
     "    torch.randn(n_walker, 1, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
     "E_loc = local_energy(rs.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
-    "rs = rs.cpu()\n",
-    "E_loc = E_loc.cpu()\n",
-    "wfnet.cpu()\n",
     "info.acceptance.mean()"
    ]
   },
@@ -339,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(E_loc.mean(dim=0).numpy())\n",
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
     "plt.ylim(-0.7, -0.5)"
    ]
   },
@@ -349,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).numpy(), bins=100);\n",
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).cpu().numpy(), bins=100);\n",
     "plt.xlim(-1.25, 0)"
    ]
   },
@@ -380,9 +378,9 @@
     "bounds = [-2, 2]\n",
     "plot_func_x(lambda x: torch.log(gtowf_big(x[:, None])), bounds, label='~exact WF');\n",
     "plot_func_x(lambda x: torch.log(gtowf(x[:, None])), bounds, label='small-basis WF');\n",
-    "plot_func_x(lambda x: torch.log(wfnet(x[:, None]))-0.2, bounds, label='DL WF');\n",
-    "plot_func_x(lambda x: torch.log(wfnet.debug('asymp', x[:, None]))-0.89, bounds, label='asymptotics');\n",
-    "plot_func_x(lambda x: wfnet.debug('jastrow', x[:, None])-0.2, bounds, label='NN');\n",
+    "plot_func_x(lambda x: torch.log(wfnet(x[:, None]))-0.2, bounds, device='cuda', label='DL WF');\n",
+    "plot_func_x(lambda x: torch.log(wfnet.debug('asymp_nuc', x[:, None]))-0.89, bounds, device='cuda', label='asymptotics');\n",
+    "plot_func_x(lambda x: wfnet.debug('jastrow', x[:, None])-0.2, bounds, device='cuda', label='NN');\n",
     "plt.legend(loc='lower center', bbox_to_anchor=(0.5, -0.35), ncol=2)\n",
     "plt.ylim(-1.5, None)"
    ]
@@ -450,7 +448,7 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2'].as_param_dict().cuda())[0].view(n_walker, -1).cpu()\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2'].as_param_dict().cuda())[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
@@ -460,7 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(E_loc.mean(dim=0).numpy())\n",
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
     "plt.ylim(-1.2, -1)"
    ]
   },
@@ -470,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(E_loc[:, 100:].flatten().clamp(-2, 0).numpy(), bins=100);"
+    "plt.hist(E_loc[:, 100:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);"
    ]
   },
   {
@@ -526,18 +524,17 @@
     "wfnet0 = WFNet(geomdb['H2'], 2, n_orbital_layers=4, ion_pot=0.7).cuda()\n",
     "n_walker = 10_000\n",
     "sampler0 = langevin_monte_carlo(\n",
-    "    wfnet0.cuda(),\n",
+    "    wfnet0,\n",
     "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs0, _, info = samples_from(sampler0, trange(500))\n",
     "E_loc0 = batch_eval_tuple(\n",
     "    local_energy,\n",
-    "    rs0.flatten(end_dim=1).split(500_000),\n",
+    "    tqdm(rs0.flatten(end_dim=1).split(50_000)),\n",
     "    wfnet0,\n",
     "    wfnet0.geom\n",
     ")[0].view(n_walker, -1)\n",
-    "wfnet0.cpu()\n",
     "info.acceptance.mean()"
    ]
   },
@@ -580,8 +577,7 @@
     "        {'samplings': trange(10, desc='samplings'), 'batch_size': 2_000},\n",
     "    ),\n",
     "    (SummaryWriter(f'runs/H2/wfnet/10/{s}') for s in ['pretrain', 'variance']),\n",
-    ")\n",
-    "wfnet.cpu();"
+    ")"
    ]
   },
   {
@@ -592,18 +588,17 @@
    "source": [
     "n_walker = 10_000\n",
     "sampler = langevin_monte_carlo(\n",
-    "    wfnet.cuda(),\n",
+    "    wfnet,\n",
     "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
     "E_loc = batch_eval_tuple(\n",
     "    local_energy,\n",
-    "    rs.flatten(end_dim=1).split(500_000),\n",
+    "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
     "    wfnet,\n",
     "    wfnet.geom\n",
     ")[0].view(n_walker, -1)\n",
-    "wfnet.cpu()\n",
     "info.acceptance.mean()"
    ]
   },
