notebooks I'm working on

--- a/notebooks/zs-midterm.ipynb
+++ b/notebooks/zs-midterm.ipynb
@@ -57,6 +57,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Activation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=np.linspace(-5,5,100)\n",
+    "def relu(x):\n",
+    "    return x*[x>0]\n",
+    "plt.figure(figsize=(5,3))\n",
+    "plt.plot(x,relu(x).flatten(),color='grey',ls=':',label='relu')\n",
+    "#plt.plot(x,ssp(torch.from_numpy(x)).numpy()+np.log(2),color='k',label='shifted softplus')\n",
+    "plt.plot(x,soft(x),color='k',label='shifted softplus')\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.xticks([])\n",
+    "plt.yticks([])\n",
+    "plt.xlabel(\"in\")\n",
+    "plt.ylabel(\"out\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def soft(x):\n",
+    "    return np.log(1+np.exp(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## $H_2^+$"
    ]
   },
