--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -69,12 +69,13 @@
     "    atom=geomdb['H2+'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='aug-cc-pv5z',\n",
+    "    cart=True,\n",
     "    charge=1,\n",
     "    spin=1,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy_big = mf.kernel()\n",
-    "gtowf_big = PyscfGTOSlaterWF(mf)"
+    "gtowf_big = TorchGTOSlaterWF(mf)"
    ]
   },
   {
@@ -87,6 +88,7 @@
     "    atom=geomdb['H2+'].as_pyscf(),\n",
     "    unit='bohr',\n",
     "    basis='6-311g',\n",
+    "    cart=True,\n",
     "    charge=1,\n",
     "    spin=1,\n",
     ")\n",
@@ -101,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: pyscf.dft.numint.eval_ao(mol, x), [-7, 7], is_torch=False);\n",
+    "plot_func_x(gtowf.get_aos, [-7, 7]);\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -111,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: pyscf.dft.numint.eval_ao(gtowf_big._mol, x), [-7, 7], is_torch=False);\n",
+    "plot_func_x(gtowf_big.get_aos, [-7, 7]);\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -130,7 +132,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf, geomdb['H2+'])[0], [-3, 3])\n",
+    "integrate_on_mesh(lambda x: gtowf_big(x.cuda()[:, None])**2, [(-6, 6), (-4, 4), (-4, 4)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_big, geomdb['H2+'])[0], [-3, 3], shift=1e-4)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf, geomdb['H2+'])[0], [-3, 3], shift=1e-10)\n",
     "plt.ylim((-10, 0));"
    ]
   },
@@ -210,6 +222,102 @@
    "outputs": [],
    "source": [
     "scf_energy, E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(blocking(E_loc[:, 50:]).numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(autocorr_coeff(range(50), E_loc[:, 50:]).numpy())\n",
+    "plt.axhline()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 1_000\n",
+    "sampler = langevin_monte_carlo(\n",
+    "    gtowf_big,\n",
+    "    torch.randn(n_walker, 1, 3).double().cuda(),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "rs, psis, info = samples_from(sampler, trange(500))\n",
+    "E_loc = batch_eval_tuple(\n",
+    "    local_energy,\n",
+    "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
+    "    gtowf_big,\n",
+    "    geomdb['H2+'].as_param_dict().double().cuda(),\n",
+    ")[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
+    "plt.ylim(-0.7, -0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist2d(\n",
+    "    *rs[:, 50:].flatten(end_dim=1)[:, 0, :2].cpu().numpy().T,\n",
+    "    bins=100,\n",
+    "    range=[[-3, 3], [-3, 3]],\n",
+    ")                                   \n",
+    "plt.gca().set_aspect(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).cpu().numpy(), bins=100);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc[:, 50:].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    scf_energy_big,\n",
+    "    E_loc[:, 50:].mean().item(),\n",
+    "    (E_loc[:, 50:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()\n",
+    ")"
    ]
   },
   {
