--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DL-QMC jh"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -37,10 +44,17 @@
     "from dlqmc.fit import fit_wfnet_multi, loss_local_energy, wfnet_fit_driver\n",
     "from dlqmc.sampling import samples_from, langevin_monte_carlo\n",
     "from dlqmc.physics import local_energy\n",
-    "from dlqmc.gto import TorchGTOSlaterWF, PyscfGTOSlaterWF, electron_density_of\n",
+    "from dlqmc.gto import TorchGTOSlaterWF, electron_density_of\n",
     "from dlqmc.analysis import autocorr_coeff, blocking\n",
     "from dlqmc.geom import Geometry, angstrom, geomdb\n",
-    "from dlqmc.utils import plot_func, plot_func_xy, plot_func_x, integrate_on_mesh, batch_eval_tuple\n",
+    "from dlqmc.utils import (\n",
+    "    plot_func,\n",
+    "    plot_func_xy,\n",
+    "    plot_func_x,\n",
+    "    integrate_on_mesh,\n",
+    "    batch_eval_tuple,\n",
+    "    number_of_parameters,\n",
+    ")\n",
     "from dlqmc.stats import GaussianKDEstimator\n",
     "import dlqmc.torchext as torchext"
    ]
@@ -373,7 +387,7 @@
     "        range_training=partial(trange, desc='training steps', leave=False),\n",
     "    ),\n",
     "    ({'samplings': range(1)}, {'samplings': trange(10, desc='samplings')}),\n",
-    "    (SummaryWriter(f'runs/wfnet/09/{s}') for s in ['pretrain', 'variance']),\n",
+    "    (SummaryWriter(f'runs/wfnet/11/{s}') for s in ['pretrain', 'variance']),\n",
     ")"
    ]
   },
@@ -501,10 +515,10 @@
     "    basis='aug-cc-pvqz',\n",
     "    charge=0,\n",
     "    spin=0,\n",
+    "    cart=True,\n",
     ")\n",
     "mf_big = scf.RHF(mol)\n",
-    "mf_big.kernel()\n",
-    "gtowf_big = PyscfGTOSlaterWF(mf_big)"
+    "mf_big.kernel()"
    ]
   },
   {
@@ -519,6 +533,7 @@
     "    basis='6-311g',\n",
     "    charge=0,\n",
     "    spin=0,\n",
+    "    cart=True,\n",
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
@@ -666,7 +681,7 @@
     "        {'samplings': trange(3, desc='samplings'), 'batch_size': 5_000},\n",
     "        {'samplings': trange(10, desc='samplings'), 'batch_size': 2_000},\n",
     "    ),\n",
-    "    (SummaryWriter(f'runs/H2/wfnet/10/{s}') for s in ['pretrain', 'variance']),\n",
+    "    (SummaryWriter(f'runs/H2/wfnet/12/{s}') for s in ['pretrain', 'variance']),\n",
     ")"
    ]
   },
@@ -772,15 +787,7 @@
     "    samples0[:, None],\n",
     "    bw=0.01,\n",
     "    weights=1/samples**2\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
     "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
     "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
    ]
@@ -798,20 +805,200 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wfnet0 = HanNet(\n",
+    "    geomdb['H2'],\n",
+    "    1,\n",
+    "    1,\n",
+    "    ion_pot=0.7,\n",
+    "    basis_dim=32,\n",
+    "    kernel_dim=32,\n",
+    "    embedding_dim=32,\n",
+    "    latent_dim=1,\n",
+    "    n_interactions=2,\n",
+    "    n_orbital_layers=2,\n",
+    ").cuda()\n",
+    "n_walker = 10_000\n",
+    "sampler0 = langevin_monte_carlo(\n",
+    "    wfnet0,\n",
+    "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "rs0, _, info = samples_from(sampler0, trange(500, desc='sampling'))\n",
+    "E_loc0 = batch_eval_tuple(\n",
+    "    local_energy,\n",
+    "    tqdm(rs0.flatten(end_dim=1).split(10_000), desc='E_loc'),\n",
+    "    wfnet0,\n",
+    "    wfnet0.geom\n",
+    ")[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wfnet = HanNet(\n",
     "    geomdb['H2'],\n",
     "    1,\n",
     "    1,\n",
     "    ion_pot=0.7,\n",
-    "    # basis_dim=2,\n",
-    "    # kernel_dim=1,\n",
-    "    # embedding_dim=1,\n",
-    "    # latent_dim=1,\n",
-    "    # n_interactions=1,\n",
-    "    # n_orbital_layers=1,\n",
+    "    basis_dim=32,\n",
+    "    kernel_dim=32,\n",
+    "    embedding_dim=32,\n",
+    "    latent_dim=1,\n",
+    "    n_interactions=2,\n",
+    "    n_orbital_layers=2,\n",
+    ").cuda()\n",
+    "sampler = langevin_monte_carlo(\n",
+    "    wfnet,\n",
+    "    torch.randn(1_000, 2, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
     ")\n",
     "wfnet"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_parameters(wfnet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_wfnet_multi(\n",
+    "    wfnet,\n",
+    "    (partial(loss_local_energy, E_ref=-1.1), loss_local_energy),\n",
+    "    (torch.optim.Adam(wfnet.parameters(), lr=2e-3) for _ in range(2)),\n",
+    "    partial(\n",
+    "        wfnet_fit_driver,\n",
+    "        sampler,\n",
+    "        n_epochs=1,\n",
+    "        n_sampling_steps=300,\n",
+    "        n_discard=50,\n",
+    "        range_sampling=partial(trange, desc='sampling steps', leave=False),\n",
+    "        range_training=partial(trange, desc='training steps', leave=False),\n",
+    "    ),\n",
+    "    (\n",
+    "        {'samplings': trange(3, desc='samplings'), 'batch_size': 5_000},\n",
+    "        {'samplings': trange(10, desc='samplings'), 'batch_size': 2_000},\n",
+    "    ),\n",
+    "    (SummaryWriter(f'runs/H2/hannet/03/{s}') for s in ['pretrain', 'variance']),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_walker = 10_000\n",
+    "sampler = langevin_monte_carlo(\n",
+    "    wfnet,\n",
+    "    torch.randn(n_walker, 2, 3, device='cuda'),\n",
+    "    tau=0.1,\n",
+    ")\n",
+    "rs, _, info = samples_from(sampler, trange(500))\n",
+    "E_loc = batch_eval_tuple(\n",
+    "    local_energy,\n",
+    "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
+    "    wfnet,\n",
+    "    wfnet.geom\n",
+    ")[0].view(n_walker, -1)\n",
+    "info.acceptance.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(E_loc0.mean(dim=0).cpu().numpy())\n",
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
+    "plt.ylim(-1.2, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(E_loc0[:, 50:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);\n",
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-2, 0).cpu().numpy(), bins=100);\n",
+    "plt.xlim(-2, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E_loc[:, 50:].mean().item(), (E_loc[:, 50:].mean(dim=1).std()/np.sqrt(E_loc.shape[0])).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rs_flat = rs[:, 50:].flatten(end_dim=1)\n",
+    "rs_flat0 = rs0[:, 50:].flatten(end_dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "density = GaussianKDEstimator(rs_flat.flatten(end_dim=1), bw=0.05, weights=2)\n",
+    "density0 = GaussianKDEstimator(rs_flat0.flatten(end_dim=1), bw=0.05, weights=2)\n",
+    "plot_func_x(density0, [-2, 3], device='cuda');\n",
+    "plot_func_x(density, [-2, 3], device='cuda');\n",
+    "plot_func_x(lambda x: electron_density_of(mf_big, x), [-2, 3], is_torch=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = (rs_flat[:, 0] - rs_flat[:, 1]).norm(dim=-1)\n",
+    "samples0 = (rs_flat0[:, 0] - rs_flat0[:, 1]).norm(dim=-1)\n",
+    "radial_pair = GaussianKDEstimator(\n",
+    "    samples[:, None],\n",
+    "    bw=0.01,\n",
+    "    weights=1/samples**2\n",
+    ")\n",
+    "radial_pair0 = GaussianKDEstimator(\n",
+    "    samples0[:, None],\n",
+    "    bw=0.01,\n",
+    "    weights=1/samples**2\n",
+    ")\n",
+    "plot_func(lambda r: radial_pair0(r[:, None]), (0, 5), device='cuda');\n",
+    "plot_func(lambda r: radial_pair(r[:, None]), (0, 5), device='cuda');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -831,6 +1018,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": false,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "196px",
+    "left": "943px",
+    "top": "95px",
+    "width": "222px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
