make local_energy(geom=) optional

--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -398,7 +398,7 @@
    "outputs": [],
    "source": [
     "plot_func_x(\n",
-    "    lambda x: local_energy(x[:, None], wfnet, wfnet.geom)[0],\n",
+    "    lambda x: local_energy(x[:, None], wfnet)[0],\n",
     "    [-15, 15],\n",
     "    device='cuda'\n",
     ")\n",
@@ -431,7 +431,7 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), wfnet, wfnet.geom)[0].view(n_walker, -1)\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), wfnet)[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
@@ -638,7 +638,6 @@
     "    local_energy,\n",
     "    tqdm(rs0.flatten(end_dim=1).split(50_000)),\n",
     "    wfnet0,\n",
-    "    wfnet0.geom\n",
     ")[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
@@ -702,7 +701,6 @@
     "    local_energy,\n",
     "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
     "    wfnet,\n",
-    "    wfnet.geom\n",
     ")[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
@@ -828,7 +826,6 @@
     "    local_energy,\n",
     "    tqdm(rs0.flatten(end_dim=1).split(10_000), desc='E_loc'),\n",
     "    wfnet0,\n",
-    "    wfnet0.geom\n",
     ")[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
@@ -912,7 +909,6 @@
     "    local_energy,\n",
     "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
     "    wfnet,\n",
-    "    wfnet.geom\n",
     ")[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
