--- a/notebooks/dl-qmc-jh.ipynb
+++ b/notebooks/dl-qmc-jh.ipynb
@@ -89,7 +89,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy_big = mf.kernel()\n",
-    "gtowf_big = TorchGTOSlaterWF(mf)"
+    "gtowf_big = TorchGTOSlaterWF(mf).cuda()"
    ]
   },
   {
@@ -108,7 +108,7 @@
     ")\n",
     "mf = scf.RHF(mol)\n",
     "scf_energy = mf.kernel()\n",
-    "gtowf = TorchGTOSlaterWF(mf)"
+    "gtowf = TorchGTOSlaterWF(mf).cuda()"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf.get_aos, [-7, 7]);\n",
+    "plot_func_x(gtowf.get_aos, [-7, 7], device='cuda');\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(gtowf_big.get_aos, [-7, 7]);\n",
+    "plot_func_x(gtowf_big.get_aos, [-7, 7], device='cuda');\n",
     "plt.ylim(-1, 1)"
    ]
   },
@@ -137,8 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_big, geomdb['H2+'])[0], [-3, 3], shift=1e-4)\n",
-    "plot_func_x(lambda x: local_energy(x[:, None], gtowf, geomdb['H2+'])[0], [-3, 3], shift=1e-10)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf_big)[0], [-3, 3], device='cuda', shift=1e-4)\n",
+    "plot_func_x(lambda x: local_energy(x[:, None], gtowf)[0], [-3, 3], device='cuda', shift=1e-10)\n",
     "plt.ylim((-10, 0));"
    ]
   },
@@ -151,11 +151,11 @@
     "n_walker = 1_000\n",
     "sampler = langevin_monte_carlo(\n",
     "    gtowf,\n",
-    "    torch.randn(n_walker, 1, 3),\n",
+    "    torch.randn(n_walker, 1, 3).cuda(),\n",
     "    tau=0.1,\n",
     ")\n",
     "rs, psis, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2+'])[0].view(n_walker, -1)\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf)[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(*rs[0][:50, 0, :2].numpy().T)\n",
+    "plt.plot(*rs[0][:50, 0, :2].cpu().numpy().T)\n",
     "plt.gca().set_aspect(1)"
    ]
   },
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(E_loc.mean(dim=0).numpy())\n",
+    "plt.plot(E_loc.mean(dim=0).cpu().numpy())\n",
     "plt.ylim(-0.7, -0.5)"
    ]
   },
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "plt.hist2d(\n",
-    "    *rs[:, 50:].flatten(end_dim=1)[:, 0, :2].numpy().T,\n",
+    "    *rs[:, 50:].flatten(end_dim=1)[:, 0, :2].cpu().numpy().T,\n",
     "    bins=100,\n",
     "    range=[[-3, 3], [-3, 3]],\n",
     ")                                   \n",
@@ -199,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).numpy(), bins=100);"
+    "plt.hist(E_loc[:, 50:].flatten().clamp(-1.25, 0).cpu().numpy(), bins=100);"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(blocking(E_loc[:, 50:]).numpy())"
+    "plt.plot(blocking(E_loc[:, 50:]).cpu().numpy())"
    ]
   },
   {
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(autocorr_coeff(range(50), E_loc[:, 50:]).numpy())\n",
+    "plt.plot(autocorr_coeff(range(50), E_loc[:, 50:]).cpu().numpy())\n",
     "plt.axhline()"
    ]
   },
@@ -247,7 +247,7 @@
    "source": [
     "n_walker = 1_000\n",
     "sampler = langevin_monte_carlo(\n",
-    "    gtowf_big,\n",
+    "    gtowf_big.double(),\n",
     "    torch.randn(n_walker, 1, 3).double().cuda(),\n",
     "    tau=0.1,\n",
     ")\n",
@@ -256,7 +256,6 @@
     "    local_energy,\n",
     "    tqdm(rs.flatten(end_dim=1).split(50_000)),\n",
     "    gtowf_big,\n",
-    "    geomdb['H2+'].as_param_dict().double().cuda(),\n",
     ")[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
@@ -553,7 +552,7 @@
     "    tau=0.1,\n",
     ")\n",
     "rs, _, info = samples_from(sampler, trange(500))\n",
-    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf, geomdb['H2'].as_param_dict().cuda())[0].view(n_walker, -1)\n",
+    "E_loc = local_energy(rs.flatten(end_dim=1), gtowf)[0].view(n_walker, -1)\n",
     "info.acceptance.mean()"
    ]
   },
